# directgate

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile_commands.json
.github/: CONTRIBUTING.md  SECURITY.md
.github/workflows/: codeql.yml  linux.yml  macos.yml  sanitizers.yml  tests.yml  windows.yml
cmake/: install-service-macos.cmake.in  install-service.cmake.in  toolchain-mingw-w64.cmake
docs/: architecture.md  building.md  configuration.md  file-manager.md  protocol.md  security.md  webrtc.md  windows.md
misc/: directgate-agent.service  io.directgate.agent.plist
misc/win/: app.rc  directgate.manifest
src/agent/: config.c  config.h  directgate.c  directgate.h  enroll.c  enroll.h  files.c  files.h  search.c  search.h  session.c  session.h  term.c  term.h
src/client/: client.c  config.c  config.h  devices.c  devices.h  relay.c  relay.h
src/common/: auth.c  auth.h  common.c  common.h  e2e.c  e2e.h  hkdf.c  hkdf.h  includes.h  keyauth.c  keyauth.h  logger.c  logger.h  protocol.c  protocol.h  siv.c  siv.h  srp.c  srp.h  transfer.c  transfer.h  version.c  version.h  webrtc.c  webrtc.h  websock.c  websock.h
tests/: CMakeLists.txt  add_key_smoke.c  api_invalid_role_smoke.c  auth_logger_smoke.c  base64_smoke.c  client_config_smoke.c  client_devices_smoke.c  client_relay_smoke.c  collections_smoke.c  common_utils_smoke.c  config_extra_smoke.c  config_smoke.c  connection_lifecycle_smoke.c  crypto_siv_openssl_smoke.c  crypto_smoke.c  enroll_edge_smoke.c  enroll_prompt_smoke.c  enroll_smoke.c  files_smoke.c  files_static_smoke.c  hash_vectors_smoke.c  json_smoke.c  keyauth_smoke.c  keyfile_apply_smoke.c  proto_crypt_smoke.c  protocol_builders_smoke.c  protocol_smoke.c  run-sanitizers.sh  run-smoke.sh  run-valgrind.sh  search_smoke.c  session_smoke.c  siv_smoke.c  sockpair_events_smoke.c  srp_smoke.c  str_buf_smoke.c  term_priv_smoke.c  transfer_smoke.c  webrtc_config_smoke.c  websock_frame_smoke.c
